# yggdrasil

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: .cursorrules  stages.md
docs/report/: mid-report.tex
scripts/: generate_keys.py  send_manipulated_packet.py  sniff_packets.py
src/: __init__.py  client.py  config.py  server.py  utils.py
